--- a/creativity.html
+++ b/creativity.html
@@ -135,38 +135,26 @@
         <section class="col-md-6 col-sm-12">
           <div class="row">
             <section class="col-12">
-              <div class="row menu-create">
-                <div
-                  class="col menu-item"
-                  onclick="selectMenuElement('cabelo', this)"
-                >
+              <ul class="menu-create horizontal-slide">
+                <li class="menu-item" onclick="selectMenuElement('cabelo', this)">
                   <img src="assets/img/ico/ico-cabelo.svg" />
-                </div>
-                <div
-                  class="col menu-item menu-active"
-                  onclick="selectMenuElement('sombrancelha', this)"
-                >
+                </li>
+                <li class="menu-item menu-active" onclick="selectMenuElement('sombrancelha', this)">
                   <img src="assets/img/ico/ico-sobrancelha.svg" />
-                </div>
-                <div
-                  class="col menu-item"
-                  onclick="selectMenuElement('olho', this)"
-                >
+                </li>
+                <li class="menu-item" onclick="selectMenuElement('olho', this)">
                   <img src="assets/img/ico/ico-olho.svg" />
-                </div>
-                <div
-                  class="col menu-item"
-                  onclick="selectMenuElement('nariz', this)"
-                >
+                </li>
+                <li class="menu-item" onclick="selectMenuElement('nariz', this)">
                   <img src="assets/img/ico/ico-nariz.svg" />
-                </div>
-                <div
-                  class="col menu-item"
-                  onclick="selectMenuElement('boca', this)"
-                >
+                </li>
+                <li class="menu-item" onclick="selectMenuElement('boca', this)">
                   <img src="assets/img/ico/ico-boca.svg" />
-                </div>
-              </div>
+                </li>
+                <li class="menu-item" onclick="selectMenuElement('camisa', this)">
+                  <img src="assets/img/ico/ico-camisa.svg" />
+                </li>
+              </ul>
             </section>
             <section class="col-12">
               <div class="row box-elements" id="content-elements"></div>
