--- a/index.html
+++ b/index.html
@@ -155,18 +155,20 @@
         <section
           class="d-flex flex-column align-items-center col-md-5 col-sm-12"
         >
-          <h1>Como Funciona?</h1>
-          <p class="text-justify">
-            Clicando em CRIAR MEU CRAFT. Abrirá a página de personalização, onde
-            você escolherá as características da sua criação. Após finalizar a
-            sua obra de arte, poderá fazer o download do molde.
-          </p>
-          <p class="text-justify">
-            Imprima-o em um papel resistente e se divirta com a montagem. E
-            poderá ter uma criaturinha como essa em suas mãos!
-          </p>
+          <div class="card-body">
+            <h5 class="card-title">Como Funciona?</h5>
+            <p class="card-text">
+              Clicando em CRIAR MEU CRAFT. Abrirá a página de personalização, onde
+              você escolherá as características da sua criação. Após finalizar a
+              sua obra de arte, poderá fazer o download do molde.
+            </p>
+            <p class="card-text">
+              Imprima-o em um papel resistente e se divirta com a montagem. E
+              poderá ter uma criaturinha como essa em suas mãos!
+            </p>
+          </div>
         </section>
-        <section class="text-center col-md-2 col-sm-12">
+        <section class="text-center col-md-4 col-sm-12">
           <a
             class="btn btn-primary d-none d-sm-block d-md-block"
             onclick="window.sessionStorage.removeItem('craftArtsId')"
@@ -177,13 +179,15 @@
           <img class="craft-img" src="assets/img/craft.png" />
         </section>
         <section
-          class="d-flex flex-column align-items-center col-md-5 col-sm-12"
+          class="d-flex flex-column align-items-center col-md-3 col-sm-12"
         >
-          <h1>Salve as suas obras</h1>
-          <p class="text-justify">
+        <div class="card-body">
+          <h5 class="card-title">Salve as suas obras</h5>
+          <p class="card-text">
             Realizando um simples cadastro, poderá salvar suas criações, para
             compartilha-lo com seus amigos!
           </p>
+        </div>
         </section>
       </div>
     </div>
