--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
       </section>
       <section class="d-flex flex-column align-items-center">
         <h1>Bem vindo de volta</h1>
-        <div class="col-lg-6 text-justify">
+        <div class="col-lg-6 text-center">
           <div class="input-group mb-3 input-group-lg">
             <div class="input-group-prepend input-group-lg">
               <span class="input-group-text" id="basic-addon1">@</span>
@@ -157,15 +157,13 @@
               aria-describedby="basic-addon1"
             />
           </div>
-          <div class="d-grid gap-2">
-            <button class="btn btn-primary" onclick="logDataUser()">
-              Entrar
-            </button>
-          </div>
+          <button class="btn btn-primary btn-lg" onclick="logDataUser()">
+            Entrar
+          </button>
         </div>
       </section>
       <section
-        class="d-flex flex-column align-items-center col-md-6 col-sm-12 mt-3"
+        class="d-flex flex-column align-items-center col-md-12 col-sm-12 mt-3"
       >
         <div>
           <div class="card-body">
@@ -173,10 +171,9 @@
             <p class="card-text">
               Cadastre-se para salvar os seus craft's e poder adquirir pacotes
               de elementos especiais!
+              <br/>
+              <a href="register.html" class="btn btn-primary mt-3">Cadastrar</a>
             </p>
-            <div class="d-grid gap-2">
-              <a href="register.html" class="btn btn-primary">Cadastrar</a>
-            </div>
           </div>
         </div>
       </section>
