alert error in login or register

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <h5 class="card-title">Salve as suas obras</h5>
           <p class="card-text">
             Realizando um simples cadastro, poderá salvar suas criações, para
-            compartilha-lo com seus amigos!
+            compartilha-las com seus amigos!
           </p>
         </div>
         </section>
