--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="ufc, papercraft, face maker" />
+    <meta name="keywords" content="papercraft, ufc, face maker" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="UFC - SMD - Projeto Integrado 2 - 2020.2" />
+    <meta name="author" content="UFC - SMD - 2020.2" />
     <meta
       name="description"
       content="Craft Maker - Criador de Papercraft personalizado"
@@ -15,24 +15,7 @@
       itemprop="description"
       content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2"
     />
-    <meta itemprop="image" content="assets/img/craftmakr-logo.svg" />
-
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.svg" />
-    <link
-      rel="apple-touch-icon"
-      sizes="128x128"
-      href="assets/img/craftmakr-logo.svg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="assets/img/craftmakr-logo.svg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="assets/img/craftmakr-logo.svg"
-    />
+    <meta itemprop="image" content="assets/img/ico-craft.png" />
 
     <meta name="theme-color" content="#febc2f" />
 
@@ -153,20 +136,18 @@
       </section>
       <div class="row">
         <section
-          class="d-flex flex-column align-items-center col-md-5 col-sm-12"
+          class="d-flex flex-column align-items-center col-md-4 col-sm-12"
         >
-          <div class="card-body">
-            <h5 class="card-title">Como Funciona?</h5>
-            <p class="card-text">
-              Clicando em CRIAR MEU CRAFT. Abrirá a página de personalização, onde
-              você escolherá as características da sua criação. Após finalizar a
-              sua obra de arte, poderá fazer o download do molde.
-            </p>
-            <p class="card-text">
-              Imprima-o em um papel resistente e se divirta com a montagem. E
-              poderá ter uma criaturinha como essa em suas mãos!
-            </p>
-          </div>
+          <h5 class="card-title">Como Funciona?</h5>
+          <p class="card-text">
+            Clicando em CRIAR MEU CRAFT. Abrirá a página de personalização, onde
+            você escolherá as características da sua criação. Após finalizar a
+            sua obra de arte, poderá fazer o download do molde.
+          </p>
+          <p class="card-text">
+            Imprima-o em um papel resistente e se divirta com a montagem. E
+            poderá ter uma criaturinha como essa em suas mãos!
+          </p>
         </section>
         <section class="text-center col-md-4 col-sm-12">
           <a
@@ -179,15 +160,22 @@
           <img class="craft-img" src="assets/img/craft.png" />
         </section>
         <section
-          class="d-flex flex-column align-items-center col-md-3 col-sm-12"
+          class="d-flex flex-column align-items-center col-md-4 col-sm-12"
         >
-        <div class="card-body">
           <h5 class="card-title">Salve as suas obras</h5>
           <p class="card-text">
             Realizando um simples cadastro, poderá salvar suas criações, para
             compartilha-las com seus amigos!
           </p>
-        </div>
+        </section>
+      </div>
+      <div class="row">
+        <section
+          class="d-flex flex-column align-items-center col-12 mt-5 text-center fw-lighter"
+        >
+        © 2021 - Projeto de alunos do curso SMD - UFC
+        <br/>
+        Graciano Barbosa Lima Junior - Josué Dos Santos Marques - Joel Ferreira Melo - João Paulo Lima
         </section>
       </div>
     </div>
