--- a/preview.html
+++ b/preview.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="ufc, papercraft, face maker" />
+    <meta name="keywords" content="papercraft, ufc, face maker" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="UFC - SMD - Projeto Integrado 2 - 2020.2" />
+    <meta name="author" content="UFC - SMD - 2020.2" />
     <meta
       name="description"
       content="Craft Maker - Criador de Papercraft personalizado"
@@ -15,28 +15,11 @@
       itemprop="description"
       content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2"
     />
-    <meta itemprop="image" content="assets/img/craftmakr-logo.svg" />
-
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.svg" />
-    <link
-      rel="apple-touch-icon"
-      sizes="128x128"
-      href="assets/img/craftmakr-logo.svg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="assets/img/craftmakr-logo.svg"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="assets/img/craftmakr-logo.svg"
-    />
+    <meta itemprop="image" content="assets/img/ico-craft.png" />
 
     <meta name="theme-color" content="#febc2f" />
 
-    <title>Craft Maker</title>
+    <title>Craft Maker: Preview</title>
     <link rel="icon" href="assets/img/favicon.svg" />
 
     <link
