--- a/myCrafts.html
+++ b/myCrafts.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="ufc, papercraft, face maker" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="UFC - SMD - Projeto Integrado 2 - 2020.2" />
-    <meta name="description" content="Craft Maker - Criador de Papercraft personalizado" />
+    <meta name="keywords" content="papercraft, ufc, face maker" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="UFC - SMD - 2020.2" />
+    <meta
+      name="description"
+      content="Craft Maker - Criador de Papercraft personalizado"
+    />
 
     <meta itemprop="name" content="Craft Maker" />
-    <meta itemprop="description" content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2" />
-    <meta itemprop="image" content="assets/img/craftmakr-logo.svg" />
-    
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon.svg" />
-    <link rel="apple-touch-icon" sizes="128x128" href="assets/img/craftmakr-logo.svg" />
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/craftmakr-logo.svg" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/img/craftmakr-logo.svg" />
+    <meta
+      itemprop="description"
+      content="Craft Maker - Criador de Papercraft personalizado - UFC - SMD - Projeto Integrado 2 - 2020.2"
+    />
+    <meta itemprop="image" content="assets/img/ico-craft.png" />
 
     <meta name="theme-color" content="#febc2f" />
     
-    <title>Craft Maker</title>
+    <title>Craft Maker: Crafts</title>
     <link rel="icon" href="assets/img/favicon.svg">
 
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
@@ -97,7 +98,7 @@
       </nav>
         <section class="text-center">
             <h1>Crafts de <span id="name-user"></span></h1>
-            <div id="myCraft" class="row"></div>
+            <div id="myCraft" class="row d-flex justify-content-center"></div>
         </section>
     </div>
 
