alteração de cor

--- a/creativity.html
+++ b/creativity.html
@@ -112,16 +112,22 @@
           </button>
           <div class="box-canvas">
             <svg id="svg-craft"></svg>
+            <span class="menu-cor d-none" onclick="selectMenuElement('cor', this)">
+              <img src="assets/img/ico/ico-cor.svg" />
+            </span>
           </div>
         </section>
         <section class="col-md-6 col-sm-12">
           <div class="row">
             <section class="col-12">
               <ul class="menu-create horizontal-slide">
+                <li class="menu-item" onclick="selectMenuElement('pele', this)">
+                  <img src="assets/img/ico/ico-pele.svg" />
+                </li>
                 <li class="menu-item" onclick="selectMenuElement('cabelo', this)">
                   <img src="assets/img/ico/ico-cabelo.svg" />
                 </li>
-                <li class="menu-item menu-active" onclick="selectMenuElement('sombrancelha', this)">
+                <li class="menu-item menu-active" onclick="selectMenuElement('sobrancelha', this)">
                   <img src="assets/img/ico/ico-sobrancelha.svg" />
                 </li>
                 <li class="menu-item" onclick="selectMenuElement('olho', this)">
@@ -133,8 +139,8 @@
                 <li class="menu-item" onclick="selectMenuElement('boca', this)">
                   <img src="assets/img/ico/ico-boca.svg" />
                 </li>
-                <li class="menu-item" onclick="selectMenuElement('camisa', this)">
-                  <img src="assets/img/ico/ico-camisa.svg" />
+                <li class="menu-item" onclick="selectMenuElement('corpo', this)">
+                  <img src="assets/img/ico/ico-corpo.svg" />
                 </li>
               </ul>
             </section>
