--- a/register.html
+++ b/register.html
@@ -157,6 +157,20 @@
           </div>
         </div>
       </section>
+      <section
+        class="d-flex flex-column align-items-center col-md-12 col-sm-12 mt-3"
+      >
+        <div>
+          <div class="card-body">
+            <h5 class="card-title">Já possui seu cadastro?</h5>
+            <p class="card-text">
+              Realize o login aqui!
+              <br/>
+              <a href="login.html" class="btn btn-primary mt-3">Entrar</a>
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
