--- a/creativity.html
+++ b/creativity.html
@@ -104,24 +104,24 @@
       </nav>
       <div class="row">
         <section class="col-md-6 col-sm-12 section-canvas">
-          <button class="btn check-button float-start">
-            <i class="bi bi-check2-square"></i>
-          </button>
-          <button class="btn x-button float-end">
-            <i class="bi bi-x-square"></i>
-          </button>
           <div class="box-canvas">
             <svg id="svg-craft"></svg>
             <span class="menu-cor d-none" onclick="selectMenuElement('cor', this)">
               <img src="assets/img/ico/ico-cor.svg" />
             </span>
+            <button class="btn check-button">
+              <i class="bi bi-check2-square"></i>
+            </button>
+            <button class="btn x-button">
+              <i class="bi bi-x-square"></i>
+            </button>
           </div>
         </section>
         <section class="col-md-6 col-sm-12">
           <div class="row">
             <section class="col-12">
               <ul class="menu-create horizontal-slide">
-                <li class="menu-item" onclick="selectMenuElement('pele', this)">
+                <li class="menu-item" onclick="selectMenuElement('corpele', this)">
                   <img src="assets/img/ico/ico-pele.svg" />
                 </li>
                 <li class="menu-item" onclick="selectMenuElement('cabelo', this)">
