--- a/index.html
+++ b/index.html
@@ -34,86 +34,88 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-primary">
-        <div class="container-fluid">
-          <div class="ms-auto">
-          <a class="text-decoration-none text-reset" href="login.html" id="indexLogin">
-            LOGIN
-          </a>
-          <button
-            class="navbar-toggler "
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarContent"
-            aria-controls="navbarContent"
-          >
-            <i class="bi bi-list"></i>
-          </button>
-          </div>
-          <div
-            class="collapse fixed-top navbar-collapse bg-light"
-            id="navbarContent"
-          >
-            <ul class="navbar-nav">
-              <li
-                class="nav-item nav-item-first"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarContent"
-                aria-controls="navbarContent"
-              >
-                <a class="nav-link text-light float-end">
-                  <i class="bi bi-x me-5 fs-4"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                  <i class="bi bi-house-fill"></i> Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  onclick="window.sessionStorage.removeItem('craftArtsId')"
-                  href="creativity.html"
-                >
-                  <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
-                </a>
-              </li>
-
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="register.html">
-                  <i class="bi bi-journal-plus"></i> Cadastrar
-                </a>
-              </li>
-              <li class="nav-item item-not-log">
-                <a class="nav-link" href="login.html">
-                  <i class="bi bi-key-fill"></i> Logar
-                </a>
-              </li>
-
-              <li class="nav-item item-log">
-                <a class="nav-link" href="myCrafts.html">
-                  <i class="bi bi-images"></i> Meus Crafts
-                </a>
-              </li>
-              <li class="nav-item item-log">
-                <a class="nav-link" href="index.html" onclick="logout()">
-                  <i class="bi bi-door-open-fill"></i> Sair
-                </a>
-              </li>
-            </ul>
-            <div
-              style="height: 100vh; width: 100%"
+      <article>
+        <nav class="navbar navbar-primary">
+          <div class="container-fluid">
+            <div class="ms-auto">
+            <a class="text-decoration-none text-reset" href="login.html" id="indexLogin">
+              LOGIN
+            </a>
+            <button
+              class="navbar-toggler "
+              type="button"
               data-bs-toggle="collapse"
               data-bs-target="#navbarContent"
               aria-controls="navbarContent"
-            ></div>
+            >
+              <i class="bi bi-list"></i>
+            </button>
+            </div>
+            <div
+              class="collapse fixed-top navbar-collapse bg-light"
+              id="navbarContent"
+            >
+              <ul class="navbar-nav">
+                <li
+                  class="nav-item nav-item-first"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarContent"
+                  aria-controls="navbarContent"
+                >
+                  <a class="nav-link text-light float-end">
+                    <i class="bi bi-x me-5 fs-4"></i>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">
+                    <i class="bi bi-house-fill"></i> Home
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    onclick="window.sessionStorage.removeItem('craftArtsId')"
+                    href="creativity.html"
+                  >
+                    <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
+                  </a>
+                </li>
+
+                <li class="nav-item item-not-log">
+                  <a class="nav-link" href="register.html">
+                    <i class="bi bi-journal-plus"></i> Cadastrar
+                  </a>
+                </li>
+                <li class="nav-item item-not-log">
+                  <a class="nav-link" href="login.html">
+                    <i class="bi bi-key-fill"></i> Logar
+                  </a>
+                </li>
+
+                <li class="nav-item item-log">
+                  <a class="nav-link" href="myCrafts.html">
+                    <i class="bi bi-images"></i> Meus Crafts
+                  </a>
+                </li>
+                <li class="nav-item item-log">
+                  <a class="nav-link" href="index.html" onclick="logout()">
+                    <i class="bi bi-door-open-fill"></i> Sair
+                  </a>
+                </li>
+              </ul>
+              <div
+                style="height: 100vh; width: 100%"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarContent"
+                aria-controls="navbarContent"
+              ></div>
+            </div>
           </div>
-        </div>
-      </nav>
-      <section class="text-center col-md-12 col-sm-12">
-        <img class="logo" src="assets/img/craftmakr-logo.svg" />
-      </section>
+        </nav>
+        <section class="text-center col-md-12 col-sm-12">
+          <img class="logo" src="assets/img/craftmakr-logo.svg" />
+        </section>
+      </article>
       <section
         class="d-flex flex-column align-items-center col-md-12 col-sm-12 mb-3"
       >
