--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="papercraft, ufc, face maker" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="UFC - SMD - 2020.2" />
+    <meta name="image" content="assets/img/ico-craft.png" />
     <meta
       name="description"
       content="Craft Maker - Criador de Papercraft personalizado"
@@ -34,88 +35,88 @@
   </head>
   <body>
     <div class="container">
-      <article>
-        <nav class="navbar navbar-primary">
-          <div class="container-fluid">
-            <div class="ms-auto">
-            <a class="text-decoration-none text-reset" href="login.html" id="indexLogin">
-              LOGIN
-            </a>
-            <button
-              class="navbar-toggler "
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarContent"
-              aria-controls="navbarContent"
-            >
-              <i class="bi bi-list"></i>
-            </button>
-            </div>
-            <div
-              class="collapse fixed-top navbar-collapse bg-light"
-              id="navbarContent"
-            >
-              <ul class="navbar-nav">
-                <li
-                  class="nav-item nav-item-first"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarContent"
-                  aria-controls="navbarContent"
-                >
-                  <a class="nav-link text-light float-end">
-                    <i class="bi bi-x me-5 fs-4"></i>
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">
-                    <i class="bi bi-house-fill"></i> Home
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    onclick="window.sessionStorage.removeItem('craftArtsId')"
-                    href="creativity.html"
-                  >
-                    <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
-                  </a>
-                </li>
-
-                <li class="nav-item item-not-log">
-                  <a class="nav-link" href="register.html">
-                    <i class="bi bi-journal-plus"></i> Cadastrar
-                  </a>
-                </li>
-                <li class="nav-item item-not-log">
-                  <a class="nav-link" href="login.html">
-                    <i class="bi bi-key-fill"></i> Logar
-                  </a>
-                </li>
-
-                <li class="nav-item item-log">
-                  <a class="nav-link" href="myCrafts.html">
-                    <i class="bi bi-images"></i> Meus Crafts
-                  </a>
-                </li>
-                <li class="nav-item item-log">
-                  <a class="nav-link" href="index.html" onclick="logout()">
-                    <i class="bi bi-door-open-fill"></i> Sair
-                  </a>
-                </li>
-              </ul>
-              <div
-                style="height: 100vh; width: 100%"
+      <nav class="navbar navbar-primary">
+        <div class="container-fluid">
+          <div class="ms-auto">
+          <a class="text-decoration-none text-reset" href="login.html" id="indexLogin">
+            LOGIN
+          </a>
+          <button
+            class="navbar-toggler "
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarContent"
+            aria-controls="navbarContent"
+            title="Menu"
+          >
+            <i class="bi bi-list"></i>
+          </button>
+          </div>
+          <div
+            class="collapse fixed-top navbar-collapse"
+            id="navbarContent"
+          >
+            <ul class="navbar-nav bg-light">
+              <li
+                class="nav-item nav-item-first"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarContent"
                 aria-controls="navbarContent"
-              ></div>
-            </div>
+              >
+                <a class="nav-link text-light float-end">
+                  <i class="bi bi-x me-5 fs-4"></i>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  <i class="bi bi-house-fill"></i> Home
+                </a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  onclick="window.sessionStorage.removeItem('craftArtsId')"
+                  href="creativity.html"
+                >
+                  <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
+                </a>
+              </li>
+
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="register.html">
+                  <i class="bi bi-journal-plus"></i> Cadastrar
+                </a>
+              </li>
+              <li class="nav-item item-not-log">
+                <a class="nav-link" href="login.html">
+                  <i class="bi bi-key-fill"></i> Logar
+                </a>
+              </li>
+
+              <li class="nav-item item-log">
+                <a class="nav-link" href="myCrafts.html">
+                  <i class="bi bi-images"></i> Meus Crafts
+                </a>
+              </li>
+              <li class="nav-item item-log">
+                <a class="nav-link" href="index.html" onclick="logout()">
+                  <i class="bi bi-door-open-fill"></i> Sair
+                </a>
+              </li>
+            </ul>
+            <div
+              style="height: 100vh; width: 100%;"
+              class="navbar-nav-back"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarContent"
+              aria-controls="navbarContent"
+            ></div>
           </div>
-        </nav>
-        <section class="text-center col-md-12 col-sm-12">
-          <img class="logo" src="assets/img/craftmakr-logo.svg" />
-        </section>
-      </article>
+        </div>
+      </nav>
+      <section class="text-center col-md-12 col-sm-12">
+        <img class="logo" src="assets/img/craftmakr-logo.svg" alt="Craft Maker"/>
+      </section>
       <section
         class="d-flex flex-column align-items-center col-md-12 col-sm-12 mb-3"
       >
@@ -132,6 +133,7 @@
           class="btn btn-primary d-sm-none d-md-none"
           onclick="window.sessionStorage.removeItem('craftArtsId')"
           href="creativity.html"
+          title="Hora de Criar sua Obra de Arte!"
         >
           CRIAR MEU CRAFT
         </a>
@@ -156,10 +158,11 @@
             class="btn btn-primary d-none d-sm-block d-md-block"
             onclick="window.sessionStorage.removeItem('craftArtsId')"
             href="creativity.html"
+            title="Hora de Criar sua Obra de Arte!"
           >
             CRIAR MEU CRAFT
           </a>
-          <img class="craft-img" src="assets/img/craft.png" />
+          <img class="craft-img" src="assets/img/craft.png" alt="Lindos Craft's montados"/>
         </section>
         <section
           class="d-flex flex-column align-items-center col-md-4 col-sm-12"
