--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="papercraft, ufc, face maker" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="UFC - SMD - 2020.2" />
+    <meta name="image" content="assets/img/ico-craft.png" />
     <meta
       name="description"
       content="Craft Maker - Criador de Papercraft personalizado"
@@ -36,20 +37,23 @@
     <div class="container">
       <nav class="navbar navbar-primary">
         <div class="container-fluid">
+          <div class="ms-auto">
           <button
-            class="navbar-toggler ms-auto"
+            class="navbar-toggler "
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarContent"
             aria-controls="navbarContent"
+            title="Menu"
           >
             <i class="bi bi-list"></i>
           </button>
+          </div>
           <div
-            class="collapse fixed-top navbar-collapse bg-light"
+            class="collapse fixed-top navbar-collapse"
             id="navbarContent"
           >
-            <ul class="navbar-nav">
+            <ul class="navbar-nav bg-light">
               <li
                 class="nav-item nav-item-first"
                 data-bs-toggle="collapse"
@@ -98,7 +102,8 @@
               </li>
             </ul>
             <div
-              style="height: 100vh; width: 100%"
+              style="height: 100vh; width: 100%;"
+              class="navbar-nav-back"
               data-bs-toggle="collapse"
               data-bs-target="#navbarContent"
               aria-controls="navbarContent"
@@ -107,7 +112,7 @@
         </div>
       </nav>
       <section class="text-center">
-        <img class="sub-logo" src="assets/img/craftmakr-logo.svg" />
+        <img class="sub-logo" src="assets/img/craftmakr-logo.svg" alt="Craft Maker"/>
       </section>
       <section class="d-flex flex-column align-items-center">
         <h1>Bem vindo de volta</h1>
@@ -140,7 +145,7 @@
               aria-describedby="basic-addon1"
             />
           </div>
-          <button class="btn btn-primary btn-lg" onclick="logDataUser()">
+          <button class="btn btn-primary btn-lg" onclick="logDataUser()" title="Login">
             Entrar
           </button>
         </div>
