--- a/print.html
+++ b/print.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="papercraft, ufc, face maker" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="UFC - SMD - 2020.2" />
+    <meta name="image" content="assets/img/ico-craft.png" />
     <meta
       name="description"
       content="Craft Maker - Criador de Papercraft personalizado"
@@ -36,20 +37,23 @@
     <div class="container">
       <nav class="navbar navbar-primary">
         <div class="container-fluid">
+          <div class="ms-auto">
           <button
-            class="navbar-toggler ms-auto"
+            class="navbar-toggler "
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarContent"
             aria-controls="navbarContent"
+            title="Menu"
           >
             <i class="bi bi-list"></i>
           </button>
+          </div>
           <div
-            class="collapse fixed-top navbar-collapse bg-light"
+            class="collapse fixed-top navbar-collapse"
             id="navbarContent"
           >
-            <ul class="navbar-nav">
+            <ul class="navbar-nav bg-light">
               <li
                 class="nav-item nav-item-first"
                 data-bs-toggle="collapse"
@@ -66,7 +70,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" onclick="window.sessionStorage.removeItem('craftArtsId')" href="creativity.html">
+                <a
+                  class="nav-link"
+                  onclick="window.sessionStorage.removeItem('craftArtsId')"
+                  href="creativity.html"
+                >
                   <i class="bi bi-emoji-heart-eyes"></i> Criar Meu Craft
                 </a>
               </li>
@@ -94,7 +102,8 @@
               </li>
             </ul>
             <div
-              style="height: 100vh; width: 100%"
+              style="height: 100vh; width: 100%;"
+              class="navbar-nav-back"
               data-bs-toggle="collapse"
               data-bs-target="#navbarContent"
               aria-controls="navbarContent"
@@ -105,19 +114,25 @@
       <div class="row">
         <section class="col-md-6 col-sm-12">
           <div class="box-canvas-print" id="box-canvas-print">
-            <img id="svg-craft" />
+            <img id="svg-craft" alt="Meu Craft" />
           </div>
         </section>
         <section class="col-md-6 col-sm-12">
           <div class="row">
             <a class="btn btn-primary btn-large btn-download mb-2" onclick="download_img(this);" download="myCraft">
-              <i class="bi bi-printer"></i> Imprimir
+              <i class="bi bi-download"></i> Download do Molde
             </a>
             <a
               class="btn btn-primary btn-large mb-2"
               href="preview.html"
             >
-              <i class="bi bi- arrow-return-left"></i> Voltar
+              <i class="bi bi-arrow-return-left"></i> Voltar
+            </a>
+            <a
+              class="btn btn-primary btn-large mb-2 item-log mt-5"
+              href="myCrafts.html"
+            >
+              Meus Crafts
             </a>
         </section>
       </div>
