mover botões de ação

--- a/creativity.html
+++ b/creativity.html
@@ -119,10 +119,10 @@
               <img src="assets/img/ico/ico-cor.svg" alt="Selecione a Cor do Elemento"/>
             </span>
             <button class="btn check-button" title="Finalizar Craft">
-              <i class="bi bi-check2-square"></i>
+              <i class="bi bi-check2-square"></i><span>Finalizar Craft</span>
             </button>
             <button class="btn x-button" title="Limpar Tela">
-              <i class="bi bi-x-square"></i>
+              <i class="bi bi-x-square"></i><span>Limpar Tela</span>
             </button>
           </div>
         </section>
@@ -153,7 +153,7 @@
                 </li>
               </ul>
             </section>
-            <section class="col-12">
+            <section class="col-12 mb-5">
               <div class="row box-elements" id="content-elements"></div>
             </section>
           </div>
