add margin button

--- a/creativity.html
+++ b/creativity.html
@@ -126,8 +126,8 @@
             </button>
           </div>
         </section>
-        <section class="col-md-6 col-sm-12">
-          <div class="row">
+        <section class="col-md-6 col-sm-12 mb-5">
+          <div class="row mb-5">
             <section class="col-12">
               <ul class="menu-create horizontal-slide">
                 <li class="menu-item" onclick="selectMenuElement('corpele', this)">
