--- a/preview.html
+++ b/preview.html
@@ -22,7 +22,9 @@
 
     <title>Craft Maker: Preview</title>
     <link rel="icon" href="assets/img/favicon.svg" />
-
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="assets/img/favicon.svg">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/ico-craft.png">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;500;700;800&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -37,7 +39,7 @@
     <div class="container">
       <nav class="navbar navbar-primary">
         <div class="container-fluid">
-          <div class="ms-auto">
+          <div>
           <button
             class="navbar-toggler "
             type="button"
@@ -60,7 +62,7 @@
                 data-bs-target="#navbarContent"
                 aria-controls="navbarContent"
               >
-                <a class="nav-link text-light float-end">
+                <a class="nav-link text-light">
                   <i class="bi bi-x me-5 fs-4"></i>
                 </a>
               </li>
@@ -96,7 +98,7 @@
                 </a>
               </li>
               <li class="nav-item item-log">
-                <a class="nav-link" href="index.html" onclick="logout()">
+                <a class="nav-link" onclick="logout()">
                   <i class="bi bi-door-open-fill"></i> Sair
                 </a>
               </li>
@@ -146,13 +148,26 @@
               <i class="bi bi-printer"></i> Ver Molde para Impressão
             </a>
             <a
-              class="btn btn-primary btn-large mb-2 item-log mt-5"
+              class="btn btn-primary btn-large mb-2 item-log mt-3"
               href="myCrafts.html"
             >
               Meus Crafts
             </a>
           </div>
         </section>
+      </div>
+    </div>
+
+    <div class="modal fade block-modal" id="CraftModal" tabindex="-1" aria-labelledby="CraftModalLabel" data-backdrop="static">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-body" id="CraftModalLabel">Mensagem Craft</h5>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="ok" data-bs-dismiss="modal">Ok</button>
+          </div>
+        </div>
       </div>
     </div>
 
