--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
         <section
           class="d-flex flex-column align-items-center col-12 mt-5 text-center"
         >
-        © 2021 - Projeto de alunos do curso SMD - UFC
-        <br/>
-        Graciano Barbosa Lima Junior - Josué Dos Santos Marques - Joel Ferreira Melo - João Paulo Lima
+        © 2021 - Projeto de alunos do curso SMD 2020.2 - UFC
         </section>
       </div>
     </div>
