--- a/creativity.html
+++ b/creativity.html
@@ -132,13 +132,13 @@
           <div class="row mb-5">
             <section class="col-12">
               <ul class="menu-create horizontal-slide">
-                <li class="menu-item" onclick="selectMenuElement('corpele', this)">
+                <li class="menu-item menu-active" onclick="selectMenuElement('corpele', this)">
                   <img src="assets/img/ico/ico-pele.svg" />
                 </li>
                 <li class="menu-item" onclick="selectMenuElement('cabelo', this)">
                   <img src="assets/img/ico/ico-cabelo.svg" />
                 </li>
-                <li class="menu-item menu-active" onclick="selectMenuElement('sobrancelha', this)">
+                <li class="menu-item" onclick="selectMenuElement('sobrancelha', this)">
                   <img src="assets/img/ico/ico-sobrancelha.svg" />
                 </li>
                 <li class="menu-item" onclick="selectMenuElement('olho', this)">
